# ticksio

./: .gitignore  README.md
docs/: ticks-format.md
scripts/: generate_test_data.py  plot_test_data.py
src/c/: CMakeLists.txt
src/c/include/: ticksio.h
src/c/include/ticksio/: chunks.h  constants.h  csv.h  helpers.h  index.h  ticksio.h  ticksio_chunks.h  ticksio_csv.h  ticksio_helpers.h  ticksio_index.h  ticksio_internal.h  ticksio_iterator.h  ticksio_platform.h  ticksio_types.h  types.h
src/c/src/: chunks.c  csv.c  helpers.c  index.c  ticksio.c  ticksio_chunks.c  ticksio_csv.c  ticksio_helpers.c  ticksio_index.c  ticksio_iterator.c
src/c/tests/: sandbox.c
